# uv_gpu_build

./: .gitignore  README.md  app.py  pyproject.toml  pyprojectcopy.toml
gpu_build/: README.md  app.py  pyproject.toml  pyprojectcopy.toml
gpu_build/models/: README.txt  deploy_manifest.json  fashionmnist_cnn.pt  sklearn_iris_rf.joblib
gpu_build/notebooks/: lecture_install_verify.ipynb  lecture_install_verify_all.py
gpu_build/utils/: __init__.py  env_check.py
utils/: __init__.py  env_check.py
