[project]
name = "gpu-build"
version = "0.1.0"
description = "ML, CV (Ultralytics/YOLO), Streamlit — PyTorch CPU/CUDA selectable via uv extras"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # ── 데이터 처리 ──────────────────────────────────────────
    "numpy",
    "pandas",
    "pyarrow",
    "scipy>=1.13.0",
    "openpyxl>=3.1.0",

    # ── 머신러닝 ─────────────────────────────────────────────
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.4.0",
    "catboost>=1.2.5",
    "optuna>=3.6.0",
    "statsmodels>=0.14.0",

    # ── 시각화 ───────────────────────────────────────────────
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    "pillow>=10.0.0",

    # ── 컴퓨터 비전 (torch/torchvision → CUDA 12.8 인덱스) ───
    "opencv-python>=4.10.0",
    "ultralytics>=8.3.0",

    # ── 차원 축소 / 비지도학습 ───────────────────────────────
    "umap-learn>=0.5.6",

    # ── 개발 도구 ────────────────────────────────────────────
    "jupyterlab>=4.4.0",
    "ipywidgets>=8.1.0",
    "nbformat>=5.10.0",
    "tqdm>=4.66.0",
    "streamlit>=1.51.0",
    "ucimlrepo>=0.0.7",
]

[project.optional-dependencies]
# Select ONE:
#   uv sync --extra cpu
#   uv sync --extra cu128
cpu = [
    "torch>=2.0.0",
    "torch!=2.4.0; sys_platform == 'win32'",
    "torchvision>=0.15.0",
]
cu128 = [
    "torch>=2.0.0",
    "torch!=2.4.0; sys_platform == 'win32'",
    "torchvision>=0.15.0",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
  ],
]

[tool.uv.sources]
# https://docs.astral.sh/uv/guides/integration/pytorch/#configuring-accelerators-with-optional-dependencies
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
